--- a/conf/mysql_collector.conf
+++ b/conf/mysql_collector.conf
@@ -11,7 +11,7 @@ system_profile_port = 9200
 ## log
 # global log level: debug, info, warning, error. lower level message will be filter
 log.level = info
-log.dir =
+log.dir = E:\\mygit\\db-sync\\log
 log.file = collector.log
 log.flush = false
 
